Fix z-index

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -68,6 +68,7 @@ header nav a {
 
 main > section:nth-of-type(1) {
   position: sticky;
+  z-index: 0;
   top: 0;
   margin-top: 0;
   padding-top: 7rem;
